Fix body overflow due to slide in animation

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ a {
 
 body {
   background-color: black;
+  overflow-x: hidden;
 }
 
 h1 {
